testdata/language-features/basic-list/listcomp08.reject.out
type error: can not unify
[32m'Bool[0m
with
[32m'String[0m

in testdata/language-features/basic-list/listcomp08.reject.lc:1:23:
value = [x | x <- [], "not Bool"]
                      ^^^^^^^^^^
------------ trace
!type error: can not unify
[32m'Bool[0m
with
[32m'String[0m

in testdata/language-features/basic-list/listcomp08.reject.lc:1:23:
value = [x | x <- [], "not Bool"]
                      ^^^^^^^^^^
------------ tooltips
testdata/language-features/basic-list/listcomp08.reject.lc 1:23-1:33
    String