testdata/language-features/basic-list/listcomp08.reject.lc
value = [x | x <- [], "not Bool"]
